2011-9-3 3:46pm Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.9
remove Kick.cpp,BackLeg.*,TurnLeg.*, AccelerateFoot.*,
and clean BasicKick, but it is still very dirty, I will clean it more in the next version
and in the next version I will clean MoveCom
Please test the kick motion carefully and feeback

2011-9-3 11:00  Pengfei Duan<bestdpf@gmail.com>
version seu3d-1.0.8
delete WalkSlow class,and delete goToSlow(*) in Player.cpp
delete task/WalkSlow.*
delete StepSlow class in task/StepSlow.* by deleting task/StepSlow.*
the same with SwingFootSlow class
the same with ShiftFoot
the same with Shoot,but the shoot now use is very dirty, I will clean it in the next version
2011-9-3 3:55	Pengfei Duan<bestdpf@gmail.com>
clean some class ever used in Player.cpp:
delete BackKick in task/BackKick.*
delete PassSidelong in task/PassSidelong.*
delete PassAng45 in task PassAng45.*
delete SideKick in task/SideKick.*
2011-9-2_23:05 Zhao Bolu<zhaobl880704@gmail.com>
delete Localization
2011-9-2_22:01 Zhao Bolu<zhaobl880704@gmail.com>
delete log in WorldModel and Player
2011-9-2_16:08 Zhao Bolu<zhaobl880704@gmail.com>
delete comments
2011-9-1_22:17 Zhao Bolu<zhaobl880704@gmail.com>
for test
just delete some comments in src/action/
2011-9-1 Duan Pengfei <bestdpf@gmail.com>
	*add support for some other BSD OSs
	-rewrite the struct's construction function operator {}, because BSD's compliers don't support this method.
		I use direct construction instead, the affected files are core/WorldModel.h, core/WorldModel.cpp,
		perception/Vision.cpp

///////////////Below is changelogs years ago, but these years little changelog is added.////
	
2007-06-12 Xu Yuan  <xuyuan.cn@gmail.com>
    ** release version 0.2.2
    * agent:
    - use the data file, it can walk with different length steps now
    - add FootAdjuster, so the lofted foot keeps horizontal
    * toolkit:
    - synchrony the agent log and server log
    - display prints by glut bitmap fonts, so the glut library should be linked