@@ -1,3 +1,7 @@
+2011-9-3 7:14pm Duan Pengfei <bestdpf@gmail.com>
+seu3d-1.0.9
+delete MoveCoM.* and change some include in top level files
+
 2011-9-3 3:46pm Duan Pengfei<bestdpf@gmail.com>
 seu3d-1.0.9
 remove Kick.cpp,BackLeg.*,TurnLeg.*, AccelerateFoot.*,
